crates/hub-qwen/src/snapshots/hub_qwen__protocol__tests__initialize.snap
---
source: crates/hub-qwen/src/protocol.rs
expression: rendered(call(name))
---
initialize
{
  "clientCapabilities": {
    "fs": {
      "readTextFile": false,
      "writeTextFile": false
    },
    "terminal": false
  },
  "clientInfo": {
    "name": "agent-hub",
    "title": "agent-hub",
    "version": "test"
  },
  "protocolVersion": 1
}
