crates/hub-qwen/src/snapshots/hub_qwen__protocol__tests__session_cancel.snap
---
source: crates/hub-qwen/src/protocol.rs
expression: rendered(call(name))
---
session/cancel
{
  "sessionId": "s-1"
}
